# triton-playground

./: .flake8  .gitignore  README.md  docker-compose.yaml
01.getting_started/: README.md  environment.yaml
01.getting_started/dockerfiles/: Dockerfile
01.getting_started/models/python_vit/: config.pbtxt
01.getting_started/models/python_vit/1/: model.py
02.build_tensorrt_from_sd/: .gitignore  README.md  client.ipynb  docker-compose.yaml  docker-compose.yml  environment.yml  main.ipynb
02.build_tensorrt_from_sd/custom-diffusers/: README.md  pyproject.toml
02.build_tensorrt_from_sd/custom-diffusers/src/custom_diffusers/: __init__.py  config.py  input_generator.py  unet_2d_condition.py
02.build_tensorrt_from_sd/models/text_encoder/: config.pbtxt
02.build_tensorrt_from_sd/models/unet/: config.pbtxt
02.build_tensorrt_from_sd/models/vae_decoder/: config.pbtxt
02.build_tensorrt_from_sd/workspace/: Makefile  convert.sh
03.ensemble_models/: convert.sh  docker-compose.yaml
03.ensemble_models/models/db/: config.pbtxt
03.ensemble_models/notebooks/: main.ipynb
dockerfiles/: server.Dockerfile
notebooks/: main.ipynb  python_vit.ipynb
workspace/notebooks/: export-sd.ipynb
workspace/scripts/: convert_to_tensorrt.sh
