[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "custom-diffusers"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "U.N. Owen", email = "void@some.where" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/U.N. Owen/custom-diffusers#readme"
Issues = "https://github.com/U.N. Owen/custom-diffusers/issues"
Source = "https://github.com/U.N. Owen/custom-diffusers"

[tool.hatch.version]
path = "src/custom_diffusers/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/custom_diffusers tests}"

[tool.coverage.run]
source_pkgs = ["custom_diffusers", "tests"]
branch = true
parallel = true
omit = [
  "src/custom_diffusers/__about__.py",
]

[tool.coverage.paths]
custom_diffusers = ["src/custom_diffusers", "*/custom-diffusers/src/custom_diffusers"]
tests = ["tests", "*/custom-diffusers/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
